--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-dinky
 title: Collectible Price Analysis
-description: (aka mtg-goose)
+description: aka mtg-goose (Discontinued as of Feb 2021)
